# wardrobe-ai-agentic

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/db/: ProfileRepository.py  QdrantStore.py  schema.sql
src/gemini/: GeminiClient.py
src/graph/: WardrobeState.py  graph.py  wardrobe_tools.py
src/graph/nodes/: ingestion_node.py  router_node.py  stylist_node.py
src/loader/: ImageAnalyser.py  IngestionHandler.py  UserProfileLoader.py  WardrobeAnalyser.py
src/retriever/: HybridRetriever.py
